PepegaBot1/testbot/logs/2021-08-19_00-38-13.txt
npm WARN discordbot@1.0.0 No description
npm WARN discordbot@1.0.0 No repository field.
npm WARN optional SKIPPING OPTIONAL DEPENDENCY: fsevents@2.3.2 (node_modules/fsevents):
npm WARN notsup SKIPPING OPTIONAL DEPENDENCY: Unsupported platform for fsevents@2.3.2: wanted {"os":"darwin","arch":"any"} (current: {"os":"linux","arch":"x64"})

audited 198 packages in 2.025s

15 packages are looking for funding
  run `npm fund` for details

found 0 vulnerabilities


> discordbot@1.0.0 start /home/minecraft/multicraft/servers/server213389
> node bot.js

/home/minecraft/multicraft/servers/server213389/node_modules/discord.js/src/rest/RESTManager.js:32
    const token = this.client.token ?? this.client.accessToken;
                                     ^

SyntaxError: Unexpected token '?'
    at wrapSafe (internal/modules/cjs/loader.js:1047:16)
    at Module._compile (internal/modules/cjs/loader.js:1097:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
    at Module.load (internal/modules/cjs/loader.js:977:32)
    at Function.Module._load (internal/modules/cjs/loader.js:877:14)
    at Module.require (internal/modules/cjs/loader.js:1019:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.<anonymous> (/home/minecraft/multicraft/servers/server213389/node_modules/discord.js/src/client/BaseClient.js:4:21)
    at Module._compile (internal/modules/cjs/loader.js:1133:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! discordbot@1.0.0 start: `node bot.js`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the discordbot@1.0.0 start script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /tmp/npm/_logs/2021-08-19T00_38_17_712Z-debug.log
